--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "quasar": "^2.0.0-beta.1"
+    "firebase": "^8.6.1",
+    "quasar": "^2.0.0-beta.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
