--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.6.1",
     "quasar": "^2.0.0-beta.1",
+    "rxjs": "^7.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
